<resources>
    <string name="app_name">Pitjarus Test App</string>
    <string name="kunjungan_pada_bulan_agustus_2020">Kunjungan pada bulan Agustus 2020</string>
    <string name="mitha_khairulnisa">Mitha Khairulnisa</string>
    <string name="role">Role:{...}</string>
    <string name="nik_md0001">NIK : MD0001</string>
    <string name="_150">150</string>
    <string name="_50">50%</string>
    <string name="total_store">Total store</string>
    <string name="actual_store">Actual Store</string>
    <string name="percentage">Percentage</string>
    <string name="kunjungan">Kunjungan</string>
    <string name="target_install_cdfdpc">Target install CDFDPC</string>
    <string name="dasboard">Dasboard</string>
    <string name="transmission_history">Transmission History</string>
    <string name="logout">Logout</string>
    <string name="lokasi_belum_sesuai">Lokasi Belum Sesuai</string>
    <string name="toko_b">Toko B</string>
    <string name="jal_pal_merah_no_25_jakarta_pusat">Jal Pal merah No 25 Jakarta Pusat</string>
    <string name="tipe_outlet">Tipe Outlet</string>
    <string name="tipe_display">Tipe Display</string>
    <string name="sub_tipe_display">Sub Tipe Display</string>
    <string name="ertm">ERTM</string>
    <string name="pareto">Pareto</string>
    <string name="e_merchandising">E-merchandising</string>
    <string name="last_visit">Last Visit</string>
    <string name="_05_09_2018">05-09-2018</string>
    <string name="data">{data}</string>
    <string name="ya">ya</string>
    <string name="tools">:</string>
    <string name="no_visit">No Visit</string>
    <string name="visit">Visit</string>
    <string name="st0001">ST0001</string>
    <string name="indomaret_komesen">Indomaret Komesen</string>
    <string name="cluster_small">Cluster: Small</string>
    <string name="tt_regular_ertm_big_pareto">TT Regular - ERTM Big - Pareto</string>
    <string name="information">information</string>
    <string name="product_check">Product Check</string>
    <string name="sku_promo">Sku Promo</string>
    <string name="ringkasan_oos">Ringkasan OOS</string>
    <string name="store_investment">Store Investment</string>
</resources>